--- a/thesis.tex
+++ b/thesis.tex
@@ -29,6 +29,9 @@
 % Layout
 \usepackage{geometry}
 \geometry{margin=1in}
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric, arrows}
+\usetikzlibrary{decorations.pathreplacing,calligraphy}
 
 % Theorem environments
 \newtheorem{theorem}{Theorem}[chapter]
@@ -246,10 +249,17 @@ Every finite subgroup of the multiplicative group of a field is cyclic.
 This is a standard result from algebra.
 \end{proof}
 
-\chapter{Main Results}
-Here we present the main contributions of the thesis.
+\chapter{Early Decoding}
 
-\section{A computer simulation}
+\section{Decode or Reject}
+\begin{figure}
+\centering
+\include{DoRDecodingOverview}
+\vspace{-3em}
+\caption{DoR Decoding Scheme for message $k$ at channel use $n_l=2$ .}
+\label{fig:exampleDecoding}
+\end{figure}
+
 
 % The following works with LaTeXml.  I consider the result accessible, but it might not be 100% WCAG compliant.
 
