Updates from Overleaf

--- a/DoRDecodingOverview.tex
+++ b/DoRDecodingOverview.tex
@@ -1,24 +1,24 @@
 \begin{tikzpicture}[thick]
 \node[inner sep=0pt] (i_10) at (-1.5,0)
 {\includegraphics[width=\textwidth]{images/DoRDecoding.png}};
-    \draw [decorate,
-    decoration = {calligraphic brace,mirror}] (-7.7,-5.5) --  (-4.2,-5.5);
-    \draw [decorate,
-    decoration = {calligraphic brace,mirror}] (-4.2,-5.5) --  (1.6,-5.5);
-    \draw [decorate,
-    decoration = {calligraphic brace,mirror}] (1.6,-5.5) --  (5.1,-5.5); 
-    \node at(3,-6) [right,fill=green,opacity=0,text opacity=1] {$\mathcal{I}^j_{n_l,k}$};
-    \node at(-1.8,-6) [right,fill=green,opacity=0,text opacity=1] {$\mathcal{C}^j_{n_l,k }$};
-    \node at(-6.4,-6) [right,fill=green,opacity=0,text opacity=1] {$\mathcal{O}^j_{n_l,k}$};
-    \node at(-6.8,1.7) [right,fill=green,opacity=0,text opacity=1,text=red] {\small{Type-1}};
-    \node at(1.9,-3.7) [right,fill=green,opacity=0,text opacity=1,text=orange] {\small{Type-1, $W\in\mathcal{K}^j$}};
-    \node at(1.9,-4) [right,fill=green,opacity=0,text opacity=1,text=orange] {\small{Type-2, $W\notin\mathcal{K}^j$}};
-    \node at(1.7,-2.35) [right,fill=white,opacity=100,text opacity=1] {$\lambda_0$};
-    \node at(1.7,3.03) [right,fill=white,opacity=100,text opacity=1] {$\lambda_0$};
-    \node at(-3.85,-2.35) [right,fill=white,opacity=100,text opacity=1] {$\lambda_1$};
-    \node at(-3.85,3.03) [right,fill=white,opacity=100,text opacity=1] {$\lambda_1$};
-    \node at(-3.4,4.15) [right,fill=white,opacity=100,text opacity=.0] {\Huge 0000000000};
-    \node at(-3.4,-1.25) [right,fill=white,opacity=100,text opacity=.0] {\Huge 0000000000};
-    \node at(-1.72,4.15 ) [right,fill=white,opacity=100,text opacity=1] {$\mathsf{i}^{n_l}$};
-    \node at(-1.72,-1.25) [right,fill=white,opacity=100,text opacity=1] {$\bar{\mathsf{i}}^{n_l}$};
+%    \draw [decorate,
+%    decoration = {calligraphic brace,mirror}] (-7.7,-5.5) --  (-4.2,-5.5);
+%    \draw [decorate,
+%    decoration = {calligraphic brace,mirror}] (-4.2,-5.5) --  (1.6,-5.5);
+%    \draw [decorate,
+%    decoration = {calligraphic brace,mirror}] (1.6,-5.5) --  (5.1,-5.5); 
+%    \node at(3,-6) [right,fill=green,opacity=0,text opacity=1] {$\mathcal{I}^j_{n_l,k}$};
+%    \node at(-1.8,-6) [right,fill=green,opacity=0,text opacity=1] {$\mathcal{C}^j_{n_l,k }$};
+%    \node at(-6.4,-6) [right,fill=green,opacity=0,text opacity=1] {$\mathcal{O}^j_{n_l,k}$};
+%    \node at(-6.8,1.7) [right,fill=green,opacity=0,text opacity=1,text=red] {\small{Type-1}};
+%    \node at(1.9,-3.7) [right,fill=green,opacity=0,text opacity=1,text=orange] {\small{Type-1, $W\in\mathcal{K}^j$}};
+%    \node at(1.9,-4) [right,fill=green,opacity=0,text opacity=1,text=orange] {\small{Type-2, $W\notin\mathcal{K}^j$}};
+%    \node at(1.7,-2.35) [right,fill=white,opacity=100,text opacity=1] {$\lambda_0$};
+%    \node at(1.7,3.03) [right,fill=white,opacity=100,text opacity=1] {$\lambda_0$};
+%    \node at(-3.85,-2.35) [right,fill=white,opacity=100,text opacity=1] {$\lambda_1$};
+%    \node at(-3.85,3.03) [right,fill=white,opacity=100,text opacity=1] {$\lambda_1$};
+%    \node at(-3.4,4.15) [right,fill=white,opacity=100,text opacity=.0] {\Huge 0000000000};
+%    \node at(-3.4,-1.25) [right,fill=white,opacity=100,text opacity=.0] {\Huge 0000000000};
+%    \node at(-1.72,4.15 ) [right,fill=white,opacity=100,text opacity=1] {$\mathsf{i}^{n_l}$};
+ %   \node at(-1.72,-1.25) [right,fill=white,opacity=100,text opacity=1] {$\bar{\mathsf{i}}^{n_l}$};
 \end{tikzpicture}
