updates for epub

--- a/thesis.tex
+++ b/thesis.tex
@@ -30,7 +30,7 @@
 \usepackage{geometry}
 \geometry{margin=1in}
 \usepackage{tikz}
-\usetikzlibrary{shapes.geometric, arrows}
+%\usetikzlibrary{shapes.geometric, arrows}
 \usetikzlibrary{decorations.pathreplacing,calligraphy}
 
 % Theorem environments
@@ -255,7 +255,6 @@ This is a standard result from algebra.
 \begin{figure}
 \centering
 \include{DoRDecodingOverview}
-\vspace{-3em}
 \caption{DoR Decoding Scheme for message $k$ at channel use $n_l=2$ .}
 \label{fig:exampleDecoding}
 \end{figure}
