deoding overview plots

--- a/thesis.tex
+++ b/thesis.tex
@@ -250,12 +250,31 @@ This is a standard result from algebra.
 \section{Decode or Reject}
 \begin{figure}
 \centering
-\include{DoRDecodingOveraview}
-\vspace{-3em}
+\includegraphics{tikz_plots/DoRDecodingOverview_n2-1.png}
 \caption{DoR Decoding Scheme for message $k$ at channel use $n_l=2$ .}
 \label{fig:exampleDecoding}
 \end{figure}
 
+\begin{figure}
+\centering
+\includegraphics{tikz_plots/DoRDecodingOverview_n4-1.png}
+\caption{DoR Decoding Scheme for message $k$ at channel use $n_l=4$ .}
+\label{fig:exampleDecoding}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{tikz_plots/TIERDecodingOverview_n2-1.png}
+\caption{TIER Decoding Scheme for message $k$ at channel use $n_l=2$ .}
+\label{fig:exampleDecoding}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{tikz_plots/TIERDecodingOverview_n4-1.png}
+\caption{TIER Decoding Scheme for message $k$ at channel use $n_l=4$ .}
+\label{fig:exampleDecoding}
+\end{figure}
 
 % The following works with LaTeXml.  I consider the result accessible, but it might not be 100% WCAG compliant.
 
