--- a/tikz_plots/DoRDecodingOverview_n4.tex
+++ b/tikz_plots/DoRDecodingOverview_n4.tex
@@ -1,12 +1,11 @@
  \documentclass{standalone}
 \usepackage{tikz}
-\usepackage{tikz}
 \usetikzlibrary{shapes.geometric, arrows}
 \usetikzlibrary{decorations.pathreplacing,calligraphy}
 \begin{document}
 \begin{tikzpicture}[thick]
 \node[inner sep=0pt] (i_10) at (-1.5,0)
-{\includegraphics[width=1.35\textwidth]{images/DoR_n2.png}};
+{\includegraphics[width=1.35\textwidth]{../images/DoR_n4.png}};
     \draw [decorate,
     decoration = {calligraphic brace,mirror}] (-7.6,-5.5) --  (-2.35,-5.5);
     \draw [decorate,
