--- a/thesis.tex
+++ b/thesis.tex
@@ -48,9 +48,9 @@
 \newcommand{\degree}{DEGREE}
 \newcommand{\programname}{OFFICIAL PROGRAM NAME}
 \newcommand{\committee}{Besma, Chair, Advisor \\ Name \\ Name\\ Name, Outside Members Need Affiliation Here}
-\newcommand{\theauthor}{YOUR NAME AS IT APPEARS ON YOUR EXAM REPORT}
+\newcommand{\theauthor}{Paul Sheldon}
 \newcommand{\priordegrees}{BS, University of Wisconsin, 2005\\ Another Prior degree, if Appropriate}
-\newcommand{\graduationyear}{YEAR}
+\newcommand{\graduationyear}{2026}
 
 % Leave the following for metadata
 \author{\theauthor}
@@ -193,23 +193,6 @@ We reference Theorem \ref{thm1}.
 \section{Motivation}
 
 
-\begin{figure}\label{fig1}
-\includegraphics[alt="Description of Image that serves the same purpose",scale=0.3]{torus.jpg}
-\caption{This is a torus}
-\end{figure}
-
-
-
-%\begin{figure}\label{fig2}
-%\includegraphics[alt="Description of Image that serves the same purpose",scale=0.8]{figure.png}
-%\caption{The Snake Lemma}
-%\end{figure}
-
-%% PDF images do not work
-%\begin{figure}\label{fig1}
-%\includegraphics[alt="Description of Image that serves the same purpose",scale=0.3]{torus.pdf}
-%\caption{This is a torus pdf}
-%\end{figure}
 
 \subsection{Historical context}
 A brief overview of how the problem developed.
@@ -276,19 +259,6 @@ This is a standard result from algebra.
 \label{fig:exampleDecoding}
 \end{figure}
 
-% The following works with LaTeXml.  I consider the result accessible, but it might not be 100% WCAG compliant.
-
-
-\begin{lstlisting}[basicstyle = \singlespacing\ttfamily\small,resetmargins=true,tabsize=5,extendedchars=false]
-def factorial(n):
-    """Compute the factorial of n recursively."""
-    if n == 0:
-        return 1
-    else:
-        return n * factorial(n - 1)
-
-print(f"5! = {factorial(5)}")
-\end{lstlisting}
 
 
 
