Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -16,7 +16,7 @@
 \usepackage{amsmath, amssymb, amsthm}
 
 % If you are including computer code the following package is useful.  It is similar to the verbatim package
-\usepackage{listings} 
+%\usepackage{listings} 
 
 \usepackage{setspace}
 
@@ -36,7 +36,7 @@
 \newtheorem{definition}[theorem]{Definition}
 
 % Hyperref
-\usepackage[pdfusetitle]{hyperref}
+\usepackage[pdfusetitle,hidelinks]{hyperref}
 
 \begin{document}
 
