--- a/thesis.tex
+++ b/thesis.tex
@@ -235,21 +235,21 @@ This is a standard result from algebra.
 \centering
 \includegraphics{tikz_plots/DoRDecodingOverview_n2-1.png}
 \caption{DoR Decoding Scheme for message $k$ at channel use $n_l=2$ .}
-\label{fig:exampleDecoding}
+\label{fig:DoRExampleDecoding_n2}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics{tikz_plots/DoRDecodingOverview_n4-1.png}
 \caption{DoR Decoding Scheme for message $k$ at channel use $n_l=4$ .}
-\label{fig:exampleDecoding}
+\label{fig:DoRexampleDecoding_n4}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics{tikz_plots/TIERDecodingOverview_n2-1.png}
 \caption{TIER Decoding Scheme for message $k$ at channel use $n_l=2$ .}
-\label{fig:exampleDecoding}
+\label{fig:TIERexampleDecoding}
 \end{figure}
 
 \begin{figure}
