Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -174,7 +174,7 @@ Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risu
 \doublespacing %other options are \onehalfspacing or \singlespacing
 
 \chapter{Introduction}
-This is the introduction chapter. We cite some classic works \cite{9585608}.  
+This is the introduction chapter. We cite some classic works \cite{108245}.  
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tincidunt nisi sed neque volutpat, et imperdiet metus congue. Donec interdum, neque at varius vehicula, elit odio tempus sapien, sed finibus lorem felis nec turpis. Aliquam erat volutpat. Mauris vehicula imperdiet erat, non aliquet magna commodo id.
 
