Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -233,6 +233,22 @@ This is a standard result from algebra.
 \section{Decode or Reject}
 \begin{figure}
 \centering
+\begin{minipage}{0.5\textwidth}
+\centering
+\includegraphics[width=\linewidth]{tikz_plots/DoRDecodingOverview_n2-1.png}
+\caption{Image 1}
+\label{fig:image1}
+\end{minipage}%
+\hfill
+\begin{minipage}{0.5\textwidth}
+\centering
+\includegraphics[width=\linewidth]{tikz_plots/DoRDecodingOverview_n4-1.png}
+\caption{Image 2}
+\label{fig:image2}
+\end{minipage}
+\end{figure}
+\begin{figure}
+\centering
 \includegraphics{tikz_plots/DoRDecodingOverview_n2-1.png}
 \caption{DoR Decoding Scheme for message $k$ at channel use $n_l=2$ .}
 \label{fig:DoRExampleDecoding_n2}
