Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -124,18 +124,6 @@ Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate veh
 
 \chapter*{Summary}
 
-Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst.
-
-Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.
-
-Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.
-
-Fusce lacinia quam nisi, euismod ultrices nulla malesuada ut. Curabitur sit amet magna quam. Praesent in libero vel turpis pellentesque egestas sit amet vel nunc.
-
-Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh.
-
 Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis.
 
 Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
@@ -233,20 +221,21 @@ This is a standard result from algebra.
 \section{Decode or Reject}
 \begin{figure}
 \centering
-\begin{minipage}{0.5\textwidth}
+\begin{minipage}{0.49\textwidth}
 \centering
 \includegraphics[width=\linewidth]{tikz_plots/DoRDecodingOverview_n2-1.png}
-\caption{Image 1}
+\caption{Image 1 test}
 \label{fig:image1}
 \end{minipage}%
 \hfill
-\begin{minipage}{0.5\textwidth}
+\begin{minipage}{0.49\textwidth}
 \centering
 \includegraphics[width=\linewidth]{tikz_plots/DoRDecodingOverview_n4-1.png}
-\caption{Image 2}
+\caption{Image 2 test}
 \label{fig:image2}
 \end{minipage}
 \end{figure}
+
 \begin{figure}
 \centering
 \includegraphics{tikz_plots/DoRDecodingOverview_n2-1.png}
