--- a/thesis.tex
+++ b/thesis.tex
@@ -29,6 +29,9 @@
 % Layout
 \usepackage{geometry}
 \geometry{margin=1in}
+
+\usepackage[printonlyused,withpage]{acronym}
+
 % Theorem environments
 \newtheorem{theorem}{Theorem}[chapter]
 \newtheorem{lemma}[theorem]{Lemma}
@@ -120,37 +123,13 @@ Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate veh
 \listoftables
 
 \chapter*{List of Abbreviations}
-
+\begin{acronym}
+\acro{DoR}{Decode or reject}
+\end{acronym}
 
 \chapter*{Summary}
-
-Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis.
-
-Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.
-
-Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue.
-
-Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.
-
-Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.
-
-Ut velit mauris, egestas sed, gravida nec, ornare ut, mi. Aenean ut orci vel massa suscipit pulvinar. Nulla sollicitudin. Fusce varius, ligula non tempus aliquam, nunc turpis ullamcorper nibh, in tempus sapien eros vitae ligula.
-
-Pellentesque rhoncus nunc et augue. Integer id felis. Curabitur aliquet pellentesque diam. Integer quis metus vitae elit lobortis egestas.
-
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi vel erat non mauris convallis vehicula. Nulla et sapien. Integer tortor tellus, aliquam faucibus, convallis id, congue eu, quam.
-
-Mauris ullamcorper felis vitae erat. Proin feugiat, augue non elementum posuere, metus purus iaculis lectus, et tristique ligula justo vitae magna.
-
-Aliquam convallis sollicitudin purus. Praesent aliquam, enim at fermentum mollis, ligula massa adipiscing nisl, ac euismod nibh nisl eu lectus.
-
-Fusce vulputate sem at sapien. Vivamus leo. Aliquam euismod libero eu enim. Nulla nec felis sed leo placerat imperdiet. Aenean suscipit nulla in justo.
-
-Suspendisse cursus rutrum augue. Nulla tincidunt tincidunt mi. Curabitur iaculis, lorem vel rhoncus faucibus, felis magna fermentum augue, et ultricies lacus lorem varius purus.
-
-Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-
-Nullam nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum.
+\ac{DoR}
+dui. Aenean ut eros et nisl sagittis vestibulum.
 
 Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risus a tortor. Integer id quam.
 
@@ -163,10 +142,6 @@ Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risu
 
 \chapter{Introduction}
 This is the introduction chapter. We cite some classic works \cite{108245}.  
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tincidunt nisi sed neque volutpat, et imperdiet metus congue. Donec interdum, neque at varius vehicula, elit odio tempus sapien, sed finibus lorem felis nec turpis. Aliquam erat volutpat. Mauris vehicula imperdiet erat, non aliquet magna commodo id.
-
-Sed porttitor urna ac ipsum rhoncus, vel dictum risus commodo. Integer ultrices dui sit amet pulvinar tempor. Phasellus nec tellus eu turpis sodales accumsan. Proin ultr
 
 
 \begin{theorem}\label{thm1}
@@ -218,22 +193,44 @@ This is a standard result from algebra.
 
 \chapter{Early Decoding}
  
-\section{Decode or Reject}
+\section{\ac{DoR} Decoding}
 \begin{figure}[h]
 \centering
 \begin{subfigure}[b]{0.45\textwidth}
 \centering
 \includegraphics[width=\textwidth]{tikz_plots/DoRDecodingOverview_n2-1.png}
-\caption{Image 1 test}
-\label{fig:image1}
+\label{fig:DoRDecodingOverview_n2}
+\caption{$n=2$}
 \end{subfigure}%
 \hfill
 \begin{subfigure}[b]{0.45\textwidth}
 \centering
 \includegraphics[width=\textwidth]{tikz_plots/DoRDecodingOverview_n4-1.png}
-\caption{Image 2 test}
-\label{fig:image2}
+\caption{$n=4$}
+\label{fig:DoRDecodingOverview_n4}
 \end{subfigure}
+\label{fig:DoRDecodingOverview}
+\caption{Overview of DoR Decoding}
+\end{figure}
+
+\section{TIER Decoding}
+\begin{figure}[h]
+\centering
+\begin{subfigure}[b]{0.45\textwidth}
+\centering
+\includegraphics[width=\textwidth]{tikz_plots/TIERDecodingOverview_wInK_n2-1.png}
+\label{fig:TIERDecodingOverview_wInK_n2}
+\caption{$w\in\mathcal{K}$}
+\end{subfigure}%
+\hfill
+\begin{subfigure}[b]{0.45\textwidth}
+\centering
+\includegraphics[width=\textwidth]{tikz_plots/TIERDecodingOverview_wNotInK_n2-1.png}
+\caption{$w\notin\mathcal{K}$}
+\label{fig:TIERDecodingOverview_wNotInK_n2}
+\end{subfigure}
+\label{fig:TIERDecodingOverview}
+\caption{Overview of TIER Decoding}
 \end{figure}
 
 %\begin{figure}
