lambda explore plots

--- a/tikz_plots/lambdaExplore.tex
+++ b/tikz_plots/lambdaExplore.tex
@@ -5,23 +5,23 @@
 \begin{document}
 \begin{tikzpicture}[thick]
 \node[inner sep=0pt] (DoRnbar) at (-12.1,0)
-{\includesvg[width=.3\textwidth]{images/lambdas/DoR_barn.svg}};
+{\includesvg[width=.3\textwidth]{../images/lambdas/DoR_barn.svg}};
 \node[inner sep=0pt] (DoRepsilon1) at (-6.6,0)
-{\includesvg[width=.3\textwidth]{images/lambdas/DoR_epsilon1.svg}};
+{\includesvg[width=.3\textwidth]{../images/lambdas/DoR_epsilon1.svg}};
 %\node[inner sep=0pt] (DoRnbar) at (-4.4,0)
 %{\includesvg[width=.23\textwidth]{images/lambdas/DoR_epsilon2.svg}};
 
 \node[inner sep=0pt] (DoRnbar) at ( -0.9,0)
-{\includesvg[width=.3\textwidth]{images/lambdas/DoR_epsilonTotal.svg}};
+{\includesvg[width=.3\textwidth]{../images/lambdas/DoR_epsilonTotal.svg}};
 \node at(-16,-.1) [right,fill=white,opacity=100,text opacity=100] {DoR};
 \node[inner sep=0pt] (TIERnbar) at (-12.1,-5)
-{\includesvg[width=.3\textwidth]{images/lambdas/TIER_barn.svg}};
+{\includesvg[width=.3\textwidth]{../images/lambdas/TIER_barn.svg}};
 \node[inner sep=0pt] (TIERRepsilon1) at (-6.6,-5)
-{\includesvg[width=.3\textwidth]{images/lambdas/TIER_epsilon1.svg}};
+{\includesvg[width=.3\textwidth]{../images/lambdas/TIER_epsilon1.svg}};
 %\node[inner sep=0pt] (TIERRnbar) at (-4.4,-4)
 %{\includesvg[width=.23\textwidth]%{images/lambdas/TIER_epsilon2.svg}};
 \node[inner sep=0pt] (TIERnbar) at ( -0.9,-5)
-{\includesvg[width=.3\textwidth]{images/lambdas/TIER_epsilonTotal.svg}};
+{\includesvg[width=.3\textwidth]{../images/lambdas/TIER_epsilonTotal.svg}};
 \node at(-16,-5.1) [right,fill=white,opacity=100,text opacity=100] {TIER};
 \node at(-12.05,2.5) [right,fill=white,opacity=100,text opacity=100] {$\frac{\bar{n}}{n}$};
 \node at(-6.75,2.5) [right,fill=white,opacity=100,text opacity=100] {$\epsilon_1$};
