Updates from Overleaf

--- a/tikz_plots/lambdaExplore.tex
+++ b/tikz_plots/lambdaExplore.tex
@@ -2,6 +2,7 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes.geometric, arrows}
 \usetikzlibrary{decorations.pathreplacing,calligraphy}
+\usepackage{svg}
 \begin{document}
 \begin{tikzpicture}[thick]
 \node[inner sep=0pt] (DoRnbar) at (-12.1,0)
