correct updated images

--- a/thesis.tex
+++ b/thesis.tex
@@ -127,11 +127,10 @@ Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate veh
 \acro{DoR}{Decode or reject}
 \end{acronym}
 
-\chapter*{Summary}
+\chapter{Summary}
 \ac{DoR}
 dui. Aenean ut eros et nisl sagittis vestibulum.
 
-Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risus a tortor. Integer id quam.
 
 
 %% Text
@@ -192,8 +191,9 @@ This is a standard result from algebra.
 \end{proof}
 
 \chapter{Early Decoding}
- 
-\section{\ac{DoR} Decoding}
+\section{Introduction}
+\subsection{\ac{DoR} Decoding}
+
 \begin{figure}[h]
 \centering
 \begin{subfigure}[b]{0.45\textwidth}
@@ -213,7 +213,7 @@ This is a standard result from algebra.
 \caption{Overview of DoR Decoding}
 \end{figure}
 
-\section{TIER Decoding}
+\subsection{TIER Decoding}
 \begin{figure}[h]
 \centering
 \begin{subfigure}[b]{0.45\textwidth}
@@ -233,34 +233,14 @@ This is a standard result from algebra.
 \caption{Overview of TIER Decoding}
 \end{figure}
 
-%\begin{figure}
-%\centering
-%\includegraphics{tikz_plots/DoRDecodingOverview_n2-1.png}
-%\caption{DoR Decoding Scheme for message $k$ at channel use $n_l=2$ .}
-%\label{fig:DoRExampleDecoding_n2}
-%\end{figure}
+\section{Results}
 
-%\begin{figure}
-%\centering
-%\includegraphics{tikz_plots/DoRDecodingOverview_n4-1.png}
-%\caption{DoR Decoding Scheme for message $k$ at channel use $n_l=4$ .}
-%\label{fig:DoRexampleDecoding_n4}
-%\end{figure}
-
-%\begin{figure}
-%\centering
-%\includegraphics{tikz_plots/TIERDecodingOverview_n2-1.png}
-%\caption{TIER Decoding Scheme for message $k$ at channel use $n_l=2$ .}
-%\label{fig:TIERexampleDecoding}
-%\end{figure}
-
-%\begin{figure}
-%\centering
-%\includegraphics{tikz_plots/TIERDecodingOverview_n4-1.png}
-%\caption{TIER Decoding Scheme for message $k$ at channel use $n_l=4$ .}
-%\label{fig:exampleDecoding}
-%\end{figure}
-
+\begin{figure}[h]
+\centering
+\includegraphics[width=\textwidth]{tikz_plots/lambdaExplore-1.png}
+\label{fig:LambdaResponses}
+\caption{Respnse to change in $\lambda_0, \lambda_1$}
+\end{figure}
 
 
 
