Updates from Overleaf

--- a/patches/name.tex
+++ b/patches/name.tex
@@ -1,6 +1,7 @@
 \documentclass{report}
 
 \usepackage{acro}
+\usepackage{latexml}
 
 \DeclareAcronym{cms}{short= C.M.S. , long=Content Management System}
 \DeclareAcronym{baas}{short= B. as S. , long=Backend As A Service}
