Updates from Overleaf

--- a/tikz_plots/PerformanceResults_IncreaseL.tex
+++ b/tikz_plots/PerformanceResults_IncreaseL.tex
@@ -1,3 +1,10 @@
+\documentclass{standalone}
+\usepackage{tikz}
+\usepackage{svg}
+\usetikzlibrary{shapes.geometric, arrows}
+\usetikzlibrary{decorations.pathreplacing,calligraphy}
+\usepackage{svg}
+\begin{document}
 \begin{tikzpicture}[thick]
 %unique images
 \node[inner sep=0pt] (100200_epsilon_perfDoR) at (-13,0)
@@ -14,4 +21,4 @@
 \node at(-5.1,-3.5) [right,fill=white,opacity=100,text opacity=100] {$\mathcal{L}=\{100,150,200\}$};
 \input{commonLabels.tex}
 \end{tikzpicture}
-PerformanceResults_DorToTier.tex
+\end{document}
