--- a/thesis.tex
+++ b/thesis.tex
@@ -115,11 +115,12 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor i
 
 \chapter*{List of Abbreviations}
 \begin{acronym}
+\acro{AWGN}{Additive White Gaussian Noise}
 \acro{DoR}{Decode or reject}
 \end{acronym}
 
 \chapter{Summary}
-dui. Aenean ut eros et nisl sagittis vestibulum.
+\ac{AWGN} dui. Aenean ut eros et nisl sagittis vestibulum.
 
 
 
