--- a/thesis.tex
+++ b/thesis.tex
@@ -239,7 +239,16 @@ This is a standard result from algebra.
 \begin{figure}[h]
 \centering
 \includegraphics[width=\textwidth]{tikz_plots/PerformanceResults_DorToTier-1.png}
-\label{fig:LambdaResponses}
+\label{fig:PerformanceResults_DorToTier}
+\caption{Achievable Results}
+\end{figure}
+\fi
+
+\ifdefined\NOTOVERLEAF
+\begin{figure}[h]
+\centering
+\includegraphics[width=\textwidth]{tikz_plots/PerformanceResults_IncreaseL-1.png}
+\label{fig:PerformanceResults_IncreaseL}
 \caption{Achievable Results}
 \end{figure}
 \fi
