--- a/thesis.tex
+++ b/thesis.tex
@@ -4,7 +4,7 @@
 %Check heading structure of tableofcontents and listoffigures etc.
 \documentclass[12pt,reqno,oneside]{amsbook}
 
-\newcommand{\NOTOVERLEAF}{}
+%\newcommand{\NOTOVERLEAF}{}
 
 \usepackage[english]{babel}  %Language needs to be specified for accessibility; currently this is not working well with latexml
 
